--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="video-responsive right-image">
-                  <iframe  src="https://youtu.be/Nb9cgwkS18s" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                  
+                  <iframe width="500" height="250" src="https://www.youtube.com/embed/Nb9cgwkS18s" title="Siemens Pañalera INDELPA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
@@ -132,7 +133,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="video-responsive" >
-                    <iframe src="https://www.youtube.com/embed/uuK8ACiJMNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="500" height="250" src="https://www.youtube.com/embed/uuK8ACiJMNI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-md-6">
@@ -174,7 +175,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-image">
-                  <img src="assets/images/right-image.jpg" alt="" />
+                  <img src="assets/images/HTML-CSS-DIPLOMA.png" alt="" />
                 </div>
               </div>
             </div>
@@ -188,7 +189,7 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Cursos, Skills, Educación</h2>
             <div class="line-dec"></div>
-            <span>Las habilidades y conocimientos que poseeo los eh adquirido en mayor parte de manera autodidactica y a travez da la experincia laboral adquiriada enfrentando los retos que surgian en los diferente lugares en los que he trabajado y/u ofrecido mis servicios</span
+            <span>Las habilidades y conocimientos que poseeo los eh adquirido en mayor parte de manera autodidactica y a travez de la experincia laboral adquiriada enfrentando los retos que surgian en los diferente lugares en los que he trabajado y/u ofrecido mis servicios</span
             >
           </div>
           <div class="row">
