--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="shortcut icon" href="assets/images/logomau.ico">
 
-    <title>Soporte Técnico Empresas</title>
+    <title>Soporte Técnico Micro Empresas</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -91,6 +91,8 @@ https://templatemo.com/tm-531-reflux
               <div class="col-md-10">
                 <div class="right-text">
                   <h2>Soporte Técnico Medianas y Pequeñas Empresas</h2>
+                  br
+                  <h3><center>Cel 7226702897</center></h3>
                   <div class="line-dec"></div>
                 </div>
               </div>
